# Vulkan-Slime

./: .gitignore  CMakeLists.txt  README.md  VulkanEngine.sln
Assetlib/: asset_loader.cpp  asset_loader.h  asset_main.cpp  material_asset.cpp  material_asset.h  mesh_asset.cpp  mesh_asset.h  prefab_asset.cpp  prefab_asset.h  texture_asset.cpp  texture_asset.h
Dependencies/stb/: stb_image.h
Project/: main.cpp
Res/Shaders/: Compile.bat  CompileShaders.sh  lit.frag  lit.frag.spv  lit.vert  lit.vert.spv  triangle.frag  triangle.vert  triangle.vert.spv
Shaders/: lit.vert  shader.frag  shader.vert  vert.spv
Src/: ImGuiLayer.cpp  ImGuiLayer.h  Log.cpp  Log.h  date.h  json.hpp  main.cpp
Vulkan/: FrustumCull.h  MaterialSystem.cpp  MaterialSystem.h  StringUtils.h  VulkanCamera.cpp  VulkanCamera.h  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanEngine.cpp  VulkanEngine.h  VulkanInitializers.cpp  VulkanInitializers.h  VulkanMesh.cpp  VulkanMesh.h  VulkanProfiler.cpp  VulkanProfiler.h  VulkanPushBuffer.cpp  VulkanPushBuffer.h  VulkanScene.cpp  VulkanScene.h  VulkanShaders.cpp  VulkanShaders.h  VulkanTextures.cpp  VulkanTextures.h  VulkanTools.cpp  VulkanTools.h  VulkanTypes.cpp  VulkanTypes.h
VulkanEngine/: Application.cpp  Application.h  CMakeLists.txt  Debugging.h  DeviceAndQueue.cpp  DeviceAndQueue.h  Image.cpp  Image.h  Mesh.cpp  Rendering.cpp  Rendering.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  ValidationLayer.cpp  ValidationLayer.h  Vertex.cpp  Vertex.h  VertexBuffer.cpp  VertexBuffer.h  VertexInput.cpp  VertexInput.h  VulkanEngine.vcxproj  VulkanEngine.vcxproj.filters  Window.cpp  Window.h  application.cpp  application.h  debugging.h  deviceAndQueue.cpp  deviceAndQueue.h  image.cpp  image.h  main.cpp  mesh.h  rendering.cpp  rendering.h  shader.cpp  shader.h  (+10 more)
VulkanEngine/x64/Debug/: VulkanEngine.exe.recipe  VulkanEngine.ilk  vc143.idb
VulkanEngine/x64/Debug/VulkanEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VulkanEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VulkanEngine/x64/Release/: VulkanEngine.exe.recipe  VulkanEngine.iobj  VulkanEngine.ipdb
VulkanEngine/x64/Release/VulkanEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VulkanEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake/: FetchLibs.cmake  IncludeLibs.cmake
lib/glfw/src/: wgl_context.c
logs/: 2022-01-23
shaders/: Compile.bat  CompileShaders.sh  lit.frag  lit.frag.spv  lit.vert.spv  tri_mesh_ssbo.vert
